--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ho</title>
+    <title>Honey Bee </title>
+    <link rel="icon" href=
+"https://i.pinimg.com/originals/79/8e/6c/798e6cede29f50eae8d90ed04276b4b8.gif"
+          type="image/x-icon">
+
     <link rel="stylesheet" href="style.css">
 </head>
 
